# grafanimate

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-release.txt  setup.py
.github/workflows/: docker.yml  oci.yml  tests.yml
doc/: backlog.rst
grafanimate/: __init__.py  animations.py  commands.py  core.py  grafana-sidecar.js  grafana-studio.js  grafana-util.js  grafana.py  marionette.py  media.py  mediastorage.py  model.py  postprocessing.py  scenarios.py  scratchpad.js  spool.py  timecontrol.py  timeutil.py  util.py
tests/: test_animations.py  test_model.py  test_timeutil.py
