[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61.0" ]

[project]
name = "grafanimate"
version = "0.10.0"
description = "Animate timeseries data with Grafana"
readme = "README.rst"
keywords = [ "animate", "animation", "automation", "gif", "grafana", "time", "video" ]

license = { text = "AGPL 3, EUPL 1.2" }
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
  { name = "Florian Maurer", email = "f.maurer@outlook.de" },
  { name = "intermittent.energy" },
]
requires-python = ">=3.9,<3.14"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Archiving",
  "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
  "datetime-interval==0.2",
  "docopt-ng<0.10",
  "furl>=2,<3",
  "marionette-driver>=3.4,<4",
  "munch>=4",
  "python-dateutil>=2.7,<3",
  "pytimeparse2>=1.4,<2",
  "tqdm>=4,<5",
  "unidecode>=1,<2",
  "where>=1,<2",
]

optional-dependencies.develop = [
  "mypy<1.19",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.14",
  "validate-pyproject<1",
]
optional-dependencies.release = [
  "build<2",
  "bump2version",
  "keyring",
  "twine<7",
]
optional-dependencies.test = [
  "freezegun>=1,<2",
  "pytest>=6,<9",
  "pytest-cov<8",
]
urls.Homepage = "https://github.com/grafana-toolbox/grafanimate"
urls.Issues = "https://github.com/grafana-toolbox/grafanimate/issues"
urls.Repository = "https://github.com/grafana-toolbox/grafanimate"
scripts.grafanimate = "grafanimate.commands:run"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"grafanimate" = [ "*.js" ]

[tool.ruff]
lint.select = [
  "AIR",
  # flake8-unused-arguments
  "ARG",
  # pyupgrade
  # "UP",
  # flake8-commas
  # "COM",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  "G",
  # isort
  "I",
  # flake8-use-pathlib
  # "PTH",
  "PIE",
  "PLR1714",
  "PLW2901",
  # flake8-quotes
  "Q",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  # future-annotations
  # "FA",
  # flake8-type-checking
  "TCH",
  "TRY201",
  "UP",
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [
  "E501",   # line too long
  "ERA001", # Found commented-out code
  "G004",   # Logging statement uses f-string
  "RET503", # Missing explicit `return` at the end of function able to return non-`None` value
  "RET504", # Unnecessary assignment to `results` before `return` statement
]
lint.per-file-ignores."__init__.py" = [
  "F401", # allow unused imports in __init__.py
  "I001", # allow unsorted imports in __init__.py
]
lint.per-file-ignores."examples/*" = [
  "ARG",  # allow unused arguments
  "F841", # allow unused local variables
]
# ===================
# Tasks configuration
# ===================
lint.per-file-ignores."tests/*" = [
  "ARG",  # allow unused arguments for pytest fixtures
  "E741", # allow reused variables
  "F841", # allow unused local variables
  "S101", # use of `assert` detected
]

[tool.isort]
profile = "black"
src_paths = [ "grafanimate", "tests" ]

[tool.pytest.ini_options]
addopts = "-rA --verbosity=3 --cov --cov-report=term-missing --cov-report=xml"
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
testpaths = [
  "grafanimate",
  "tests",
]
xfail_strict = true
markers = [
]

[tool.coverage.run]
branch = false
omit = [
  "tests/*",
]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
packages = [ "grafanimate" ]
exclude = [
]
ignore_missing_imports = true
check_untyped_defs = false
implicit_optional = true
install_types = true
no_implicit_optional = true
non_interactive = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

format = [
  { cmd = "ruff format" },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]

lint = [
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]

release = [
  { cmd = "python -m build" },
  { cmd = "twine upload dist/*.tar.gz dist/*.whl" },
]

test = { cmd = "pytest" }
